[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Global/Camera.gd" type="Script" id=1]
[ext_resource path="res://Frames/Light.png" type="Texture" id=2]

[sub_resource type="Environment" id=1]
background_mode = 4
auto_exposure_scale = 0.2
glow_intensity = 8.0
glow_strength = 0.6
glow_blend_mode = 0
glow_hdr_threshold = 0.0
glow_hdr_luminance_cap = 69.28
glow_hdr_scale = 4.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Retro Gaming.ttf"

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = SubResource( 2 )

[node name="Camera" type="Camera2D"]
light_mask = 0
z_index = 1000
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="UI" type="ReferenceRect" parent="."]
light_mask = 0
border_color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="WorldEnvironment" parent="UI"]
environment = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="UI"]
light_mask = 524288
z_index = 4096
texture = ExtResource( 2 )
texture_scale = 50.0
range_item_cull_mask = 524288
shadow_item_cull_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="P1" type="ReferenceRect" parent="UI"]
light_mask = 0
margin_left = -912.0
margin_top = -471.0
margin_right = -912.0
margin_bottom = -471.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontHp" type="ColorRect" parent="UI/P1"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
light_mask = 0
margin_left = -2.0
margin_top = -19.0
margin_right = 502.0
margin_bottom = 1.0
color = Color( 0.196078, 1, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="ColorRect" parent="UI/P1/FontHp"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 502.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( -192, -55.969 )
color = Color( 0.196078, 1, 0.196078, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P1/FontHp/Hp"]
light_mask = 0
margin_left = 1.0
margin_top = 1.2182
margin_right = 112.0
margin_bottom = 14.2182
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Hp"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontQ" type="ColorRect" parent="UI/P1"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = 16.0
margin_top = 28.0
margin_right = 156.0
margin_bottom = 45.0
color = Color( 1, 0.784314, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q" type="ColorRect" parent="UI/P1/FontQ"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.784314, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P1/FontQ/Q"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Q Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontW" type="ColorRect" parent="UI/P1"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = 16.0
margin_top = 7.0
margin_right = 156.0
margin_bottom = 24.0
color = Color( 1, 0.862745, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="ColorRect" parent="UI/P1/FontW"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.862745, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P1/FontW/W"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "W Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontE" type="ColorRect" parent="UI/P1"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = 160.0
margin_top = 7.0
margin_right = 300.0
margin_bottom = 24.0
color = Color( 1, 0.941176, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="ColorRect" parent="UI/P1/FontE"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.941176, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P1/FontE/E"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "E Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontR" type="ColorRect" parent="UI/P1"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = 304.0
margin_top = 7.0
margin_right = 444.0
margin_bottom = 24.0
color = Color( 1, 1, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="ColorRect" parent="UI/P1/FontR"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 1, 0.0980392, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P1/FontR/R"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "R Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2" type="ReferenceRect" parent="UI"]
light_mask = 0
margin_left = 1300.0
margin_right = 1300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontHp" type="ColorRect" parent="UI/P2"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
light_mask = 0
margin_left = -914.0
margin_top = -490.0
margin_right = -410.0
margin_bottom = -470.0
color = Color( 0.196078, 1, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="ColorRect" parent="UI/P2/FontHp"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 502.0
margin_bottom = 4.0
color = Color( 0.196078, 1, 0.196078, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P2/FontHp/Hp"]
light_mask = 0
margin_left = 1.0
margin_top = 1.2182
margin_right = 112.0
margin_bottom = 14.2182
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Hp"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontQ" type="ColorRect" parent="UI/P2"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = -611.0
margin_top = -443.0
margin_right = -471.0
margin_bottom = -426.0
color = Color( 1, 0.784314, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q" type="ColorRect" parent="UI/P2/FontQ"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.784314, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P2/FontQ/Q"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Q Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontW" type="ColorRect" parent="UI/P2"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = -900.0
margin_top = -464.0
margin_right = -760.0
margin_bottom = -447.0
color = Color( 1, 0.862745, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="ColorRect" parent="UI/P2/FontW"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.862745, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P2/FontW/W"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "W Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontE" type="ColorRect" parent="UI/P2"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = -755.851
margin_top = -463.865
margin_right = -615.851
margin_bottom = -446.865
color = Color( 1, 0.941176, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="ColorRect" parent="UI/P2/FontE"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.941176, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P2/FontE/E"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "E Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontR" type="ColorRect" parent="UI/P2"]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = -611.0
margin_top = -464.0
margin_right = -471.0
margin_bottom = -447.0
color = Color( 1, 0.862745, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="ColorRect" parent="UI/P2/FontR"]
light_mask = 524288
margin_left = 2.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 3.0
color = Color( 1, 0.862745, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/P2/FontR/R"]
light_mask = 0
margin_top = -1.0
margin_right = 136.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "R Spell"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
